# haskell-leetcode

./: .gitignore  README.md  haskell-things.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/2108e607/: cabal_macros.h
.stack-work/ghci/7d9ac1c2/: cabal_macros.h
.stack-work/ghci/9b60166d/: cabal_macros.h
src/: FizzBuzz.hs  Main.hs  NumOfStepsToReduceNumToZero.hs  RunningSum.hs  SmallerNumbersThanCurrent.hs  SortArrayByParity.hs  TargetArrayInGivenOrder.hs  ToLowerCase.hs  TwoSum.hs
src/Easy/: FizzBuzz.hs  MinimumIndexSumofTwoLists.hs  NumOfStepsToReduceNumToZero.hs  RunningSum.hs  SmallerNumbersThanCurrent.hs  TargetArrayInGivenOrder.hs
src/Medium/: MagicSquare.hs  SortList.hs
