name:                haskell-things
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-things#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-things
  hs-source-dirs:      src
                       , src/Easy
                       , src/Medium
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
  other-modules:       TwoSum
                       , FizzBuzz
                       , RunningSum
                       , SmallerNumbersThanCurrent
                       , NumOfStepsToReduceNumToZero
                       , TargetArrayInGivenOrder
                       , SortArrayByParity
                       , ToLowerCase
                       , MinimumIndexSumofTwoLists
                       , SortList
                       , MagicSquare
